style.css
/* ... */
#modal-img {
  max-width: calc(100% - 10px);
  max-height: calc(100% - 50px);
  z-index: 20;
  vertical-align: middle;
  margin: 5px 5px 45px 0;
}
#modal-actions {
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 45px;
}
#modal-actions button {
  margin: 5px 10px;
  display: inline-block;
}
#modal button img {
  z-index: -1;
  width: 24px;
}
#modal-pause {
  display: none;
}
#controls {
  position: absolute;
  top: 10px;
  text-align: center;
  width: 156px;
}
#sigma-buttons {
  display: flex;
  vertical-align: middle;
}
#sigma-buttons button {
  flex: auto;
  width: 35px;
  height: 35px;
  margin: 2px;
  background: #eee;
  outline: none;
  cursor: pointer;
  font-size: 15px;
  font-family: monospace;
  font-weight: bold;
  padding: 0;
  border: 2px solid #555;
  border-radius: 5px;
}
#sigma-buttons button img {
  width: 20px;
  margin-top: 3px;
}
#regscreen {
  display: none;
}
#fullscreen {
  display: block;
}
@media all and (display-mode: fullscreen) {
  #regscreen {
    display: block;
  }
  #fullscreen {
    display: none;
  }
}
#search {
  margin: 2px;
}
#search input {
  width: 100%;
  padding: 7px 5px 7px 7px;
  text-align: center;
  font-family: monospace;
  font-size: 14px;
  background: #eee;
  display: block;
  line-height: 16px;
  border: 2px solid #111;
  border-radius: 5px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}
#suggestions-select {
  display: none;
  width: 152px;
  height: 33px;
  border: 2px solid #111;
  border-radius: 5px;
}
/* -------- Switch Styles ------------*/
.choices .network-choice:last-child {
  margin-bottom: 0;
}
.choices .network-choice:first-child {
  margin-top: 0;
}
.choices {
  margin: 15px 0 0px 0;
}
.network-choice {
  display: flex;
  justify-content: center;
  position:relative;
  width: 100%;
  margin-bottom: 10px;
  height: 28px;
}
label, .toggle {
  height: 100%;
  border-radius: 100px;
}
label {
  display: block;
  width: 210px;
  background-color: white;
  border-radius: 100px;
  position: relative;
  cursor: pointer;
}
.toggle {
  position: absolute;
  width: 103px;
  background-color: var(--marvel-red);
  transition: transform .3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
  margin: -2px 0 0 -2px;
  border: 2px solid #555;
}
.names {
  font-size: 90%;
  font-weight: bolder;
  width: 100%;
  height: 100%;
  position: absolute;
  display: flex;
  justify-content: space-around;
  align-items: center;
  align-content: center;
  user-select: none;
}
.names > div {
  font-size: 14px;
  font-family: monospace;
  font-weight: bold;
  text-transform: uppercase;
}
.left, .right{
  width: 50%;
  text-align: center;
}
[type="checkbox"] {
  display: none;
}
/* Toggle */
[type="checkbox"]:checked + .network-switch-label .toggle {
  transform: translateX(100%);
}
.left {
  color: white;
}
.right {
  color: var(--marvel-red);
}
[type="checkbox"]:checked + .network-switch-label .left {
  color: var(--marvel-red);
}
[type="checkbox"]:checked + .network-switch-label .right {
  color: white;
}

/* Responsiveness */
@media (min-width: 700px) {
  #controls {
    left: 203px;
  }
  #comics-bar {
    right: 0;
  }
}
@media (min-width: 1001px) {
  #controls {
    left: 310px;
  }
}
@media (max-width: 1000px) {
  #sidebar, .footer, #comics-bar {
    width: 198px;
  }
  #histo-legend .hidable {
    display: none;
  }
  #controls {
    top: 5px;
  }
  #loader {
    left: calc(50% + 75px);
  }
  .logo {
    height: 42px;
  }
  h1 {
    font-size: 18px!important;
    padding: 13px 0!important;
  }
  .choices {
    margin: 5px 0 0px 0;
  }
  label {
    width: 180px;
  }
  .toggle {
    width: 88px;
  }
  .names > div {
    font-size: 13px;
  }
  #view-comics, #view-node, #view-all-comics {
    font-size: 14px;
  }
  #comics-bar h3 {
    font-size: 14px;
  }
  #comics-title {
    padding: 8px 2px 0px 2px!important
  }
  #comics-subtitle-extra {
    display: none!important;
  }
  #comics-list li {
    padding: 2px;
  }
  #credits-main {
    display: block;
  }
  #credits, .asterisk {
    display: none;
  }
}
@media (max-width: 700px) {
  #comics-bar {
    left: 0;
    height: calc(100% - 33px);
    width: 200px;
    border-radius: 0 6px 6px 0;
  }
  #comics-title {
    width: calc(100% - 36px);
    min-height: 32px;
    padding: 4px 4px 0px 4px!important;
  }
  #close-bar {
    margin: 0;
    width: 24px;
    height: 24px;
  }
  #close-bar img {
    width: 16px;
    margin-top: 2px;
  }
  #controls {
    right: 5px;
    top: 5px;
  }
}
@media (max-height: 400px) {
  #comic-details {
    height: calc(100% / 3);
  }
}
@media (max-height: 600px) {
  #search {
    position: fixed;
    bottom: 5px;
    margin-right: 5px;
  }
  .network-choice {
    height: 20px;
  }
  .logo {
    height: 42px;
  }
  h1 {
    font-size: 28px;
    padding: 7px 0;
  }
  .choices {
    margin: 5px 0 0px 0;
  }
  #credits-main {
    display: block;
  }
  #credits, .asterisk, #title {
    display: none;
  }
  #node-label {
    padding-top: 5px;
  }
  #comics {
    line-height: 18px;
  }
  #comics-list li {
    padding: 2px;
    font-size: 14px;
  }
  #controls {
    width: 136px;
  }
  #sigma-buttons button {
    width: 30px;
    height: 30px;
  }
  #suggestions-select {
    width: 132px;
    height: 28px;
  }
  #loader-list img {
    top: 10px;
  }
}
@media not (pointer: coarse) {
  .desktop-details {
    display: inline;
  }
  .mobiles-details {
    display: none;
  }
  #loader-comics img {
    width: 25px;
  }
}
@media (pointer: coarse) {
  input, textarea, button, select, a, label, div, p {
    -webkit-tap-highlight-color: rgba(0,0,0,0);
  }
  #search input, #comics-filter {
    display: none;
  }
  #suggestions-select {
    display: block;
  }
  #comics-cache {
    display: none!important;
  }
  .desktop-details {
    display: none;
  }
  .mobiles-details {
    display: inline;
  }
}
@media (pointer: coarse) and (max-height: 600px) and (max-width: 700px) {
  #loader-comics {
    left: 203px;
    right: unset;
    padding: 0;
  }
}
/* ... */

